--- a/helm/etl/templates/etl-job.yaml
+++ b/helm/etl/templates/etl-job.yaml
@@ -277,7 +277,8 @@ spec:
                   wget https://github.com/mikefarah/yq/releases/download/${VERSION}/${BINARY}.tar.gz -O - |\
                     tar xz && mv ${BINARY} /usr/bin/yq
 
-                  n=$(yq eval '.mappings | length' < /gen3/tube/etlMapping.yaml)
+                  # n=$(yq eval '.mappings | length' < /gen3/tube/etlMapping.yaml)
+                  n=4
                   echo $n
                   for ((i = 0 ; i <=$(($n + 0)) ; i++)); 
                   do
