--- a/helm/neuvector/values.yaml
+++ b/helm/neuvector/values.yaml
@@ -16,6 +16,7 @@ policies:
 
 # hostname/service name for our DB
 DB_HOST: development-gen3-postgresql
+ES_HOST: gen3-elasticsearch-master
 
 # Prefix for relevant services deployed through Argo
 ARGOCD_PREFIX: development-gen3
