point to test etl map

--- a/helm/etl/templates/etl-job.yaml
+++ b/helm/etl/templates/etl-job.yaml
@@ -48,7 +48,7 @@ spec:
                 secretName: ssh-pubkey
             - name: etl-mapping
               configMap:
-                name: etl-mapping
+                name: etl-mapping-test
             - name: useryaml
               configMap:
                 name: useryaml
