--- a/helm/etl/templates/etl-job.yaml
+++ b/helm/etl/templates/etl-job.yaml
@@ -275,6 +275,8 @@ spec:
                   cp /gen3/tube/etlMapping.yaml /gen3/tube/etl_current.yaml
                   python run_etl.py -s import
 
+                  python run_etl.py -s transform
+
                   exitcode=$?
                   
                   # Kill sidecar and all processes
