attempt fix on volume mount of test etl map

--- a/helm/etl/templates/etl-job.yaml
+++ b/helm/etl/templates/etl-job.yaml
@@ -233,7 +233,7 @@ spec:
                   subPath: settings.py
                 - name: etl-mapping-test
                   readOnly: true
-                  mountPath: "/gen3/tube/etlMapping.yaml"
+                  mountPath: "/gen3/tube/"
                   subPath: etlMapping.yaml
                 - name: useryaml
                   mountPath: "/gen3/tube/user.yaml"
